# TcpEncapsulation

./: .gitignore  README.md
multithreadsocket/: Address.cpp  Address.h  Any.h  CMakeLists.txt  Channel.cpp  Channel.h  EventLoop.cpp  EventLoop.h  EventLoopThread.cpp  EventLoopThread.h  EventLoopThreadPool.cpp  EventLoopThreadPool.h  FileOperator.cpp  FileOperator.h  Poller.cpp  Poller.h  Socket.cpp  Socket.h  TcpClient.cpp  TcpClient.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  TestClient.cpp  TestClient.h  TestFile.cpp  TestFile.h  ThreadPool.cpp  ThreadPool.h  Timer.cpp  Timer.h
multithreadsocket/QtSerial/: dvrserial.cpp  dvrserial.h  serialmodule.cpp  serialmodule.h
multithreadsocket/bank/: CounterClerk.cpp  CounterClerk.h  Customer.h
multithreadsocket/mysql/first/: MysqlOperator.cpp  MysqlOperator.h  OperatorMain.cpp
multithreadsocket/protobuf/contactsExample/: CMakeLists.txt  Company.cpp  Company.h  ContactSerializeTransfer.cpp  ContactSerializeTransfer.h  ContactTransfer.cpp  ContactTransfer.h  Contacts.cpp  Contacts.h  PersonStruct.cpp  PersonStruct.h  Test.cpp  TestContactSerializeTransClient.cpp  TestContactSerializeTransServer.cpp  TestContactTransferClient.cpp  TestContactTransferClient.h  TestContactTransferServer.cpp  TestContactTransferServer.h  contacts.pb.cc  contacts.pb.h  contacts.proto  readme.txt
multithreadsocket/protobuf/src_dir/: contacts.pb.cc  contacts.pb.h  example.pb.cc  example.pb.h  example.proto  test  test.cpp
multithreadsocket/protobuf/util/: umount.sh  update.sh
multithreadsocket/protobuf_mysql/: CMakeLists.txt  PetMysqlOperator.cpp  PetMysqlOperator.h  PetProtocMessCodec.cpp  PetProtocMessCodec.h  ProtocolMessageCodec.cpp  ProtocolMessageCodec.h  RandomProductPet.cpp  RandomProductPet.h  TestPetSerializeTransClient.cpp  TestPetSerializeTransServer.cpp  pet.pb.cc  pet.pb.h  pet.proto
multithreadsocket/test/: TestAll.cpp  TestAll.h  TestClientMulti.cpp  TestClientMulti.h  TestServerMulti.cpp  TestServerMulti.h  TestThreadPool.cpp  TestThreadPool.h
